--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="index.html"><img style="    width: auto;height: 101px;" src="images/team/getfitlogo.png" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img style="    width: auto;height: 101px;" src="./images/team/getfitlogo.png" alt=""></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
