--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ we deal with Online training, Fat loss,special population, Customised Diet plans
 
                             <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
                                 <div class="team-thumb">
-                                    <img src="../getfit/images/team/WhatsApp Image 2021-11-26 at 7.34.23 PM.jpeg" class="img-fluid" alt="Trainer">
+                                    <img src="./images/team/WhatsApp Image 2021-11-26 at 7.34.23 PM.jpeg" class="img-fluid" alt="Trainer">
 
                                     <div class="team-info d-flex flex-column">
 
@@ -168,7 +168,7 @@ we deal with Online training, Fat loss,special population, Customised Diet plans
 
                             <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
                                 <div class="class-thumb">
-                                    <img src="../getfit/images/team/onlineworkout-lowres-2x1-1.jpg" class="img-fluid" alt="Class">
+                                    <img src="./images/team/onlineworkout-lowres-2x1-1.jpg" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Online Fitness sessions </h3>
@@ -182,7 +182,7 @@ we deal with Online training, Fat loss,special population, Customised Diet plans
 
                             <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
                                 <div class="class-thumb">
-                                    <img src="../getfit/images/team/punch-boxing-workout-wallpaper-preview.jpg" class="img-fluid" alt="Class">
+                                    <img src="./images/team/punch-boxing-workout-wallpaper-preview.jpg" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Kick Boxing</h3>
@@ -196,7 +196,7 @@ we deal with Online training, Fat loss,special population, Customised Diet plans
 
                             <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="class-thumb">
-                                    <img src="../getfit/images/team/zumba-fatcamera-c9d4ee824a0f4fda883484f878abc8ae.jpg" class="img-fluid" alt="Class">
+                                    <img src="./images/team/zumba-fatcamera-c9d4ee824a0f4fda883484f878abc8ae.jpg" class="img-fluid" alt="Class">
 
                                     <div class="class-info">
                                         <h3 class="mb-1">Zumba</h3>
